<resources>
  <string name="app_name">Donde el gordo</string>
  <string name="title_activity_platos">PlatosActivity</string>
  <string name="navigation_drawer_close">Cerrar navegacion</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>

  <string name="menu_home">Inicio</string>
  <string name="menu_slideshow">Diapositivas</string>
  <string name="menu_tools">Herramientas</string>
  <string name="menu_share">Compatir</string>
  <string name="menu_send">Enviar</string>
  <string name="title_activity_bebidas">"Bebidas "</string>
  <string name="title_activity_navegation">Navegacion</string>
  <string name="title_activity_plato">Platos</string>

  <string name="seleccionarImagen" size="12">Seleccionar imagen</string>
  <string name="gestionarImagen">Gestionar Imagen</string>
  <string name="registrarPlato">Registrar plato</string>
  <string name="manana">Mañana</string>
  <string name="tarde">Tarde</string>
  <string name="noche">Noche</string>
  <string name="tiempo">Tiempo</string>
  <string name="platoFuerte">Plato fuerte</string>
  <string name="entrada">Entrada</string>
  <string name="registrar">Registrar</string>

  <string name="nombreDelPlato">Nombre del plato</string>
  <string name="tiempoDePreparacion">Tiempo de preparación</string>
  <string name="precio">Precio</string>
  <string name="ingredientes">Ingredientes</string>
  <string name="informacionGeneral" size="12">Información general</string>

  <string name="limpiar" size="12">Limpiar</string>
  <string name="salir" size="12">Salir</string>
  <string name="deliciasDelGordo" size="12">Delicias del gordo</string>

  <string name="registraBebida">Registrar bebida</string>
  <string name="nombreDeLaBebida">Nombre de la bebida</string>
  <string name="menu_gallery">Galeria</string>
  <string name="action_settings">Configuracion</string>
  <string name="nav_header_desc">Cabecera de navegacion</string>
  <string name="navigation_drawer_open">Abrir navegación</string>

  <string name="seleccioneApp" size="12">Seleccione la aplicación</string>
  <string name="hora" size="12"> Hora y </string>
  <string name="horas" size="12"> Horas y </string>
  <string name="minuto" size="12"> Minuto </string>
  <string name="minutos" size="12"> Minutos </string>



</resources>
